# practica

./: .gitignore  Algorithms.hpp  CMakeLists.txt  CmakeLists.txt  EventManager.hpp  EventPayload.hpp  EventType.hpp  Function.hpp  LargeObject.cpp  List.cpp  List.hpp  List.tpp  ListIterator.hpp  ListIterator.tpp  ListNode.cpp  ListNode.hpp  ListNode.tpp  Main  Main.cpp  PriorityQueque.hpp  PriorityQueque.tpp  Queque.hpp  Queque.tpp  Queue.hpp  Queue.tpp  SynchronizedPriorityQueque.hpp  SynchronizedPriorityQueque.tpp  SynchronizedPriorityQueue.hpp  SynchronizedPriorityQueue.tpp  Task.hpp  Task.tpp  TaskArgument.hpp  TaskResult.hpp  TaskScheduler.hpp  TaskScheduler.tpp  TestVector.cpp  Vector.cpp  Vector.hpp  Vector.tpp  VectorIterator.hpp  (+1 more)
include/: ClientSocket.cpp  ClientSocket.hpp  ServerSocket.cpp  ServerSocket.hpp
